@startuml Iterator_Pattern

title Iterator Pattern - Class Diagram

' Iterator Interface
interface Iterator <<interface>> {
    + {abstract} hasNext() : bool
    + {abstract} next() : MenuItem*
}

' Menu Interface
interface Menu <<interface>> {
    + {abstract} createIterator() : unique_ptr<Iterator>
}

' MenuItem - The element being iterated
class MenuItem {
    - m_name : string
    - m_description : string
    - m_vegetarian : bool
    - m_price : double
    + MenuItem(name, description, vegetarian, price)
    + getName() : string
    + getDescription() : string
    + isVegetarian() : bool
    + getPrice() : double
    + print() : void
}

' DinerMenu - Uses array internally
class DinerMenu {
    - m_menuItems : array<unique_ptr<MenuItem>, MAX_ITEMS>
    - m_numberOfItems : size_t
    - {static} MAX_ITEMS : size_t = 10
    + DinerMenu()
    + addItem(name, description, vegetarian, price) : void
    + createIterator() : unique_ptr<Iterator>
}

' DinerMenuIterator - Nested class
class DinerMenuIterator {
    - m_items : array<unique_ptr<MenuItem>, MAX_ITEMS>&
    - m_position : size_t
    + DinerMenuIterator(items)
    + hasNext() : bool
    + next() : MenuItem*
}

' PancakeHouseMenu - Uses vector internally
class PancakeHouseMenu {
    - m_menuItems : vector<unique_ptr<MenuItem>>
    + PancakeHouseMenu()
    + addItem(name, description, vegetarian, price) : void
    + createIterator() : unique_ptr<Iterator>
}

' PancakeMenuIterator - Nested class
class PancakeMenuIterator {
    - m_items : vector<unique_ptr<MenuItem>>&
    - m_position : size_t
    + PancakeMenuIterator(items)
    + hasNext() : bool
    + next() : MenuItem*
}

' CafeMenu - Uses map internally
class CafeMenu {
    - m_menuItems : map<string, unique_ptr<MenuItem>>
    + CafeMenu()
    + addItem(name, description, vegetarian, price) : void
    + createIterator() : unique_ptr<Iterator>
}

' CafeMenuIterator - Nested class
class CafeMenuIterator {
    - m_items : vector<MenuItem*>
    - m_position : size_t
    + CafeMenuIterator(items)
    + hasNext() : bool
    + next() : MenuItem*
}

' Waitress - Client
class Waitress {
    - m_menus : vector<Menu*>
    + Waitress(menus)
    + printMenu() : void
    + printVegetarianMenu() : void
    + isItemVegetarian(name) : bool
    - printMenu(iterator) : void
}

' Relationships
Menu <|.. DinerMenu : implements
Menu <|.. PancakeHouseMenu : implements
Menu <|.. CafeMenu : implements

Iterator <|.. DinerMenuIterator : implements
Iterator <|.. PancakeMenuIterator : implements
Iterator <|.. CafeMenuIterator : implements

DinerMenu +-- DinerMenuIterator : creates
PancakeHouseMenu +-- PancakeMenuIterator : creates
CafeMenu +-- CafeMenuIterator : creates

DinerMenu o-- MenuItem : contains
PancakeHouseMenu o-- MenuItem : contains
CafeMenu o-- MenuItem : contains

Waitress o-- Menu : uses
Waitress ..> Iterator : uses
Waitress ..> MenuItem : accesses

note right of Iterator
  Iterator interface provides
  uniform access to different
  collection types without
  exposing their representation
end note

note left of Waitress
  Client works with menus
  through Iterator interface.
  Doesn't know about internal
  collection implementations.
end note

note bottom of DinerMenu
  Uses fixed-size array
  Different implementation
  but same iterator interface
end note

note bottom of PancakeHouseMenu
  Uses dynamic vector
  Different implementation
  but same iterator interface
end note

@enduml
